--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,17 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "ethers": "^5.5.3",
+    "firebase": "^9.6.3",
+    "ipfs-http-client": "^55.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.0.8",
+    "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.2.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
