--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "ethers": "^5.5.3",
     "firebase": "^9.6.3",
+    "identicon.js": "^2.3.3",
     "ipfs-http-client": "^55.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
