--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
+    "@sanity/client": "^3.1.0",
     "@tailwindcss/forms": "^0.4.0",
     "ethers": "^5.5.3",
     "firebase": "^9.6.3",
